--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
+    "v-click-outside": "^3.1.2",
     "vue": "^2.6.12",
+    "vue-click-outside": "^1.1.0",
     "vue-smooth-reflow": "^0.1.12",
     "vue-tailwind": "^1.2.8"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@myparcel/eslint-config": "^3.0.0",
     "@vue/cli-plugin-babel": "~4.5.6",
     "@vue/cli-service": "~4.5.6",
