--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@fullhuman/vue-cli-plugin-purgecss": "~3.0.1",
     "@myparcel/eslint-config": "^3.0.0",
     "@vue/cli-plugin-babel": "~4.5.6",
     "@vue/cli-service": "~4.5.6",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "postcss": "^8.1.1",
+    "postcss-import": "^12.0.1",
     "tailwindcss": "^1.8.10",
     "vue-template-compiler": "^2.6.12"
   },
