--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -13,17 +14,24 @@
     "v-click-outside": "^3.1.2",
     "vue": "^2.6.12",
     "vue-click-outside": "^1.1.0",
+    "vue-router": "^3.2.0",
     "vue-smooth-reflow": "^0.1.12",
     "vue-tailwind": "^1.2.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.0",
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@fullhuman/vue-cli-plugin-purgecss": "~3.0.1",
     "@myparcel/eslint-config": "^3.0.0",
+    "@types/jest": "^26.0.23",
     "@vue/cli-plugin-babel": "~4.5.6",
+    "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "~4.5.6",
     "autoprefixer": "^9.8.6",
-    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "link-module-alias": "^1.2.0",
     "postcss": "^8.1.1",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.8.10",
