--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "v-click-outside": "^3.1.2",
     "vue": "^2.6.12",
     "vue-click-outside": "^1.1.0",
-    "vue-router": "^3.2.0",
     "vue-smooth-reflow": "^0.1.12",
-    "vue-tailwind": "^1.2.8"
+    "vue-tailwind": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -26,15 +25,14 @@
     "@myparcel/eslint-config": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@vue/cli-plugin-babel": "~4.5.6",
-    "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "~4.5.6",
     "autoprefixer": "^9.8.6",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "link-module-alias": "^1.2.0",
-    "postcss": "^8.1.1",
+    "postcss": "^7.0.35",
     "postcss-import": "^12.0.1",
-    "tailwindcss": "^1.8.10",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
